# inno-cli-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
src/exec/: installer.rs  mod.rs
src/extract/: embedded.rs  tmp.rs
src/handle_progress/: callback.rs  display.rs  patch.rs
src/parse/: install-script.rs  properties.rs
src/pascal_types/: ansistring.rs  array.rs  mod.rs  tpsexec.rs  tsetupstep.rs  variant.rs
