[package]
name = "inno-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
codepage = "0.1.1"
encoding_rs = "0.8.34"
lzma = "0.2.2"
mimalloc = "0.1.41"
